# Pixly

./: README.md  build.gradle.kts  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/: loadImage.android.kt
composeApp/src/commonMain/kotlin/: AppContext.kt  Constants.kt  FilterMatrix.kt  ImageFormats.kt  ImageSpace.kt  LeftPane.kt  ProtectedBitmapInterface.kt  RightPane.kt  ScalabeState.kt  ShowModifiers.kt  ZilBitmap.kt  ZilBitmapInterface.kt  ZilImageJni.kt  ZilJvmImage.kt  enums.kt  loadImage.kt  utils.kt
composeApp/src/desktopMain/: build.gradle.kts
composeApp/src/desktopMain/kotlin/: Constants.kt  DesktopProtectedBitmap.kt  ImageSpace.kt  LeftPane.kt  ProtectedBitmap.kt  RightPane.kt  ThumbnailGenerator.kt  ZilBitmap.kt  ZilImageJni.kt  ZilJvmImage.kt  desktopUtils.kt  main.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
rust/: Cargo.toml  README.md
rust/.cargo/: config
rust/src/: lib.rs
src/main/kotlin/: AppContext.kt  AppStates.kt  FiltersPane.kt  LeftPane.kt  Main.kt  RightPane.kt  ShowModifiers.kt  ZilBitmap.kt  ZilImage.kt  ZilImageAndBitmapInterop.kt  enums.kt  utils.kt
src/main/kotlin/components/: CollapsibleBox.kt  DirectoryViewer.kt  HistogramChart.kt  ImageFilters.kt  ImageInformation.kt  SaveAs.kt  ScalableImage.kt  SliderTextComponent.kt  SplitPane.kt  TopHoveringIcons.kt
src/main/kotlin/events/: ExternalNavigationEventBus.kt
src/main/kotlin/history/: HistoryOperationsEnum.kt  HistoryWidget.kt
(+74 files in other folders)
