[package]
name = "zune-jni-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true


[dependencies]
jni = "0.21.1"
zune-image = { version = "0.4.14" }
zune-core = { version = "0.4.12"}
zune-imageprocs = { version = "0.4.14" }
libc = "0.2.1"
